# snake-game

./: .clang-format  .clangd  CMakeLists.txt  license.md  package-lock.json  package.json  readme.md  script.sh
.husky/: pre-commit
src/: food.c  food.h  game.c  game.h  main.c  map.c  map.h  snake.c  snake.h
src/array-list/: d_array_list.c  d_array_list.h
src/gui/: menu.c  menu.h  pause.c  pause.h
